--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,14 +16,19 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+
   scroll-behavior: smooth;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 body {
   /*color: var(--foreground);
   background: var(--background);*/
-  background-color: #ff6b00;
-  color: #fefaf5;
+  background-color: #181d21;
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -58,13 +63,14 @@ a {
   top: 0;
   z-index: 1000;
   width: 100%;
-  backdrop-filter: blur(8px);
+  /*backdrop-filter: blur(8px);*/
+  background-color: #f41;
 }
 
 .header-inner {
   display: flex;
   align-items: center;
-  padding: 1rem 0;
+  padding: 0.4rem 0;
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
@@ -76,43 +82,23 @@ a {
   margin-left: 2rem;
 }
 
-.header-title p {
-  font-family: var(--font-cormorant-garamond);
+.header-title {
+  font-family: var(--font-buenard);
+  font-size: 2.4rem;
+  letter-spacing: 0.2rem;
 }
 
 .logo-icon {
   width: auto;
-  height: 46px;
-  fill: #fefaf5;
+  height: 50px;
+  fill: #fff;
   margin-right: 0.5rem;
-}
-
-@media (max-width: 768px) {
-  .header-logo {
-    display: none;
-  }
 }
 
 .header-menu {
   display: flex;
   justify-content: flex-end;
   flex: 1;
-}
-
-@media (max-width: 768px) {
-  .header-menu {
-    justify-content: flex-start;
-    overflow-x: auto;
-    scrollbar-width: none;
-  }
-
-  .header-inner {
-    padding: 0.5rem 0;
-  }
-
-  .nav-item {
-    padding: 0 1rem;
-  }
 }
 
 .nav-list {
@@ -133,8 +119,8 @@ li:last-child {
 .nav-item {
   position: relative;
   flex: 0 0 auto;
-  padding: 0.5rem 1rem;
-  margin-right: 2rem;
+  padding: 0.5rem 0.7rem;
+  margin-right: 0.5rem;
 }
 
 /* Main nav link text */
@@ -145,11 +131,11 @@ li:last-child {
 }
 
 .nav-text {
-  font-family: var(--font-cormorant-garamond);
-  font-size: 1.55rem;
+  font-family: var(--font-buenard);
+  font-size: 1.45rem;
   font-weight: 800;
   letter-spacing: 0.1rem;
-  color: #fefaf5;
+  text-transform: capitalize;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   mix-blend-mode: difference;
 }
@@ -186,6 +172,40 @@ li:last-child {
   border-bottom: 2px solid rgb(255, 255, 255);
   /*border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;*/
+}
+
+@media (max-width: 1280px) {
+  .logo-icon {
+    height: 30px;
+  }
+
+  .header-title {
+    font-size: 1.4rem;
+  }
+
+  .nav-text {
+    font-size: 1.05rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-menu {
+    justify-content: flex-start;
+    overflow-x: auto;
+    scrollbar-width: none;
+  }
+
+  .header-inner {
+    padding: 0.5rem 0;
+  }
+
+  .header-logo {
+    display: none;
+  }
+
+  .nav-item {
+    padding: 0 1rem;
+  }
 }
 
 /* HERO */
@@ -230,13 +250,12 @@ li:last-child {
 }
 
 .hero-title-text {
-  font-family: var(--font-dm-sans);
+  font-family: var(--font-hanken-grotesk);
   font-size: 1.3rem;
   font-weight: 300;
   line-height: 1.4;
   letter-spacing: 0.3rem;
 
-  color: #fefaf5;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   white-space: nowrap;
   position: relative;
@@ -271,13 +290,13 @@ li:last-child {
 .hero-title {
   display: block;
   position: absolute;
-  top: 36%;
+  top: 25%;
 }
 
 .hero-title-main {
-  font-family: var(--font-cormorant-garamond);
+  font-family: var(--font-buenard);
   font-size: 8rem;
-  font-weight: 300;
+  font-weight: 700;
   letter-spacing: 0.3rem;
   line-height: 1.3;
 
@@ -317,13 +336,19 @@ li:last-child {
   padding: 0.9rem 2rem;
   font-size: 1.1rem;
   font-weight: 500;
-  color: #fefaf5;
-  background-color: var(--orange, #ff6600);
+  color: #fff;
+  background-color: #f41;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   border: none;
   border-radius: 6px;
   text-decoration: none;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   transition: background 0.3s ease, transform 0.2s ease;
+
+  opacity: 0;
+  transform: translateY(40px);
+  animation: textSlideIn 0.7s ease-out forwards;
+  animation-delay: 2.5s;
 }
 
 .hero-reserve-button:hover {
@@ -433,9 +458,10 @@ li:last-child {
   display: block;
   width: auto;
   overflow: hidden;
+  background-color: #f7f6f2;
 }
 
-.restaurant-m::before {
+/*.restaurant-m::before {
   content: "";
   position: absolute;
   inset: 0;
@@ -449,7 +475,7 @@ li:last-child {
   opacity: 0.7;
   filter: brightness(0.9) saturate(0.7);
   pointer-events: none;
-}
+}*/
 
 .restaurant-m .content {
   position: relative;
@@ -458,7 +484,6 @@ li:last-child {
 
 .content {
   position: relative;
-  max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -473,54 +498,53 @@ li:last-child {
 }
 
 .restaurant-text {
-  display: flex;
-  flex-wrap: wrap;
-  flex: 1;
-  justify-content: flex-start;
+  display: block;
 }
 
 .restaurant-text-wrapper {
-  padding: 2rem;
-  border-left: 2px solid #fefaf5;
-  border-bottom: 2px solid #fefaf5;
-  border-radius: 12px;
-  background: #ff6b00;
-  width: 50%;
+  background: #f7f6f2;
+  width: 70%;
 
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  /*text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);*/
 
   pointer-events: none;
 }
 
 .restaurant-title {
-  font-family: var(--font-cormorant-garamond);
-  font-size: 3rem;
+  font-family: var(--font-buenard);
+  font-size: 6rem;
   letter-spacing: 0.1rem;
-  font-weight: 400;
-  margin-bottom: 0.7rem;
+  font-weight: 700;
+  margin-bottom: 2.5rem;
+  color: #f41;
+  vertical-align: baseline;
+  line-height: 1;
 }
 
 .restaurant-subtitle {
-  font-family: var(--font-dm-sans);
+  font-family: var(--font-hanken-grotesk);
   font-size: 1.5rem;
-  font-weight: 200;
-  line-height: 1.7rem;
+  font-weight: 500;
+  line-height: 1.3rem;
   letter-spacing: 0.1rem;
   margin-bottom: 2rem;
+  color: #181d21;
 }
 
 .restaurant-description {
-  font-family: var(--font-dm-sans);
-  font-size: 1.1rem;
+  font-family: var(--font-hanken-grotesk);
+  font-size: 1.3rem;
   line-height: 1.6;
-  font-weight: 200;
+  font-weight: 400;
+  color: #181d21;
   margin-bottom: 1.1rem;
+  width: 60%;
 }
 
 .restaurant-image {
   flex: 1;
-  max-width: 50%;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .restaurant-image img {
@@ -536,6 +560,46 @@ li:last-child {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   text-align: center;
   display: none;
+}
+
+.divider-container {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.divider-anchor {
+  display: flex;
+  justify-content: space-between;
+  align-self: center;
+  position: relative;
+}
+
+.divider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  height: 2px;
+  background: #f41;
+  transform-origin: left;
+  transition: transform 0.5s cubic-bezier(0.78, 0, 0.37, 1);
+}
+
+.message {
+  color: #f41;
+  font-family: var(--font-hanken-grotesk);
+  font-size: 1.1rem;
+  line-height: 1;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-top: 1rem;
 }
 
 @media (max-width: 768px) {
@@ -586,13 +650,13 @@ li:last-child {
 
 .chef-m {
   position: relative;
-  display: flex;
-  height: 100%;
+  display: block;
   width: auto;
   overflow: hidden;
+  background-color: #f7f6f2;
 }
 
-.chef-m::before {
+/*.chef-m::before {
   content: "";
   position: absolute;
   inset: 0;
@@ -604,7 +668,7 @@ li:last-child {
   background-repeat: no-repeat;
 
   pointer-events: none;
-}
+}*/
 
 .chef-m .content {
   position: relative;
@@ -613,56 +677,70 @@ li:last-child {
 }
 
 .chef {
-  padding: 8rem 2rem;
+  padding: 3rem 2rem;
 }
 
 .chef-wrapper {
-  width: 53%;
+  width: 70%;
   display: flex;
   align-items: flex-start;
   box-sizing: border-box;
   flex-direction: column;
-  padding: 2rem;
-  border-radius: 12px;
-  border-left: 2px solid #fefaf5;
-  border-bottom: 2px solid #fefaf5;
 
   color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  /*text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);*/
 
   pointer-events: none;
 }
 
 .top-subtitle {
-  font-family: var(--font-dm-sans);
-  font-size: 1rem;
-  font-weight: 200;
-  letter-spacing: 0.3rem;
-  margin-bottom: 1rem;
+  font-family: var(--font-hanken-grotesk);
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.1rem;
+  margin-left: 0.5rem;
+  color: #181d21;
 }
 
 .chef-title {
-  font-family: var(--font-cormorant-garamond);
-  font-size: 2rem;
-  font-weight: 300;
+  font-family: var(--font-buenard);
+  font-size: 6rem;
+  font-weight: 700;
   letter-spacing: 0.1rem;
-  margin-bottom: 1.4rem;
+  margin-bottom: 2.5rem;
+  vertical-align: baseline;
+  line-height: 1;
+
+  color: #f41;
 }
 
 .chef-story {
-  font-family: var(--font-dm-sans);
-  font-size: 1.1rem;
-  font-weight: 200;
+  font-family: var(--font-hanken-grotesk);
+  font-size: 1.3rem;
+  font-weight: 400;
   line-height: 1.6;
-  margin-bottom: 2.4rem;
+  margin-bottom: 1.1rem;
+  color: #181d21;
+  width: 60%;
 }
 
 .deco {
-  margin-bottom: 2.4rem;
+  width: auto;
+  height: 30px;
+  fill: #f41;
+  margin-right: 0.5rem;
+  margin-left: 10rem;
+  margin-bottom: 1.5rem;
 }
 
 .chef-signo {
+  width: auto;
+  height: 30px;
+  fill: #f41;
+  margin-right: 0.5rem;
+  margin-left: 10rem;
   margin-bottom: 1rem;
+  margin-top: 1.5rem;
 }
 
 @media (max-width: 768px) {
@@ -680,47 +758,52 @@ li:last-child {
 .menu-m {
   /*background: var(--background);
   color: var(--foreground);*/
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  color: #181d21;
+  /*text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);*/
+  background-color: #f7f6f2;
+  overflow: hidden;
 }
 
 .menu {
-  padding: 6rem 2rem;
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  padding: 3rem 2rem;
 }
 
 .menu-wrapper {
   position: relative;
   padding: 2rem;
-  border: 2px solid #fefaf5;
+  border: 2px dashed #f41;
   border-radius: 12px;
   margin-top: 3rem;
 }
 
 .menu-header {
   text-align: center;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   pointer-events: none;
 }
 
 .menu-title {
-  font-family: var(--font-cormorant-garamond);
+  font-family: var(--font-buenard);
   font-size: 3rem;
+  font-weight: 700;
+  color: #f41;
   margin-bottom: 0.5rem;
 
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -62%);
   z-index: 2;
-  background-color: #ff6b00;
+  background-color: #f7f6f2;
   padding: 0 1rem;
   border-radius: 999px;
 }
 
 .menu-flavor-text {
+  font-family: var(--font-hanken-grotesk);
   font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
 }
 
 .menu-deco img {
@@ -733,20 +816,19 @@ li:last-child {
 .menu-tabs {
   display: flex;
   justify-content: center;
-  gap: 1.5rem;
-  margin-bottom: 3rem;
+  gap: 3.5rem;
+  margin-bottom: 2.5rem;
 }
 
 .menu-tab {
   background: none;
   border: none;
-  font-family: var(--font-cormorant-garamond);
-  font-weight: 500;
+  font-family: var(--font-buenard);
+  font-weight: 700;
   font-size: 1.35rem;
   letter-spacing: 0.1rem;
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
-
+  /*text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);*/
+  color: #f41;
   padding: 0.75rem 1.5rem;
   cursor: pointer;
   border-bottom: 2px solid transparent;
@@ -755,7 +837,7 @@ li:last-child {
 
 .menu-tab:hover,
 .menu-tab.active {
-  border-bottom: 2px solid #fefaf5;
+  border-bottom: 2px solid #f41;
 }
 
 /* Grid */
@@ -772,11 +854,10 @@ li:last-child {
 }
 
 .menu-subsection-title {
-  font-family: var(--font-dm-sans);
-  font-size: 1rem;
+  font-family: var(--font-hanken-grotesk);
+  font-size: 1.2rem;
   margin: 2rem 0 1rem;
   font-weight: 200;
-  color: #fefaf5;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   letter-spacing: 0.1rem;
 
@@ -795,32 +876,31 @@ li:last-child {
 }
 
 .menu-item-name {
-  font-family: var(--font-cormorant-garamond);
+  font-family: var(--font-buenard);
   font-size: 1.7rem;
   font-weight: 300;
   letter-spacing: 0.2rem;
+  color: #f41;
 }
 
 .menu-item-price {
-  font-family: var(--font-dm-sans);
+  font-family: var(--font-hanken-grotesk);
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
   align-self: end;
 }
 
 .menu-item-separator {
   height: 1px;
-  background: #fefaf5;
+  background: #f41;
   margin: 0.5rem 0;
 }
 
 .menu-item-description {
-  font-family: var(--font-dm-sans);
+  font-family: var(--font-hanken-grotesk);
   font-size: 1.05rem;
-  font-weight: 200;
+  font-weight: 300;
   letter-spacing: 0.04rem;
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 .menu-item-description-row {
@@ -828,6 +908,7 @@ li:last-child {
   align-items: center;
   gap: 0.5rem;
   margin-top: 0.25rem;
+  flex-wrap: wrap;
 }
 
 .menu-item-description {
@@ -1018,6 +1099,14 @@ li:last-child {
 
 /* RECIPES */
 
+.recipes-m {
+  position: relative;
+  display: block;
+  width: auto;
+  overflow: hidden;
+  background-color: #f41;
+}
+
 .recipes {
   padding: 6rem 2rem;
   text-align: center;
@@ -1027,7 +1116,7 @@ li:last-child {
   position: relative; /* Required for positioning the title */
   padding-top: 4rem; /* Add spacing for the floating title */
   padding: 2rem;
-  border: 2px solid #fefaf5;
+  border: 2px dashed #fefaf5;
   border-radius: 12px;
   margin-top: 3rem; /* So it doesn't clash with previous sections */
 }
@@ -1036,12 +1125,12 @@ li:last-child {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -54%);
   border: 2px solid #fefaf5;
   border-radius: 999px;
-  background: #ff6b00;
+  background: #f41;
   padding: 0 1rem;
-  font-family: var(--font-cormorant-garamond);
+  font-family: var(--font-buenard);
   font-size: 2.5rem;
   color: #fefaf5;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
@@ -1050,7 +1139,10 @@ li:last-child {
 }
 
 .recipesText {
+  font-family: var(--font-hanken-grotesk);
   font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
   margin-bottom: 2rem;
   margin-top: 1rem;
   color: #fefaf5;
@@ -1103,10 +1195,10 @@ li:last-child {
 }
 
 .reserveTitle {
-  font-family: var(--font-cormorant-garamond);
-  font-size: 2.5rem;
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  font-family: var(--font-buenard);
+  font-size: 3rem;
+  font-weight: 700;
+  color: #fff;
 
   margin-bottom: 0.5rem;
   text-align: center;
@@ -1114,8 +1206,7 @@ li:last-child {
 
 .reserveText {
   text-align: center;
-  color: #fefaf5;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+  color: #fff;
   margin-bottom: 2rem;
 }
 
@@ -1155,19 +1246,20 @@ li:last-child {
 }
 
 .form button {
-  background-color: #1f1f1f;
+  background-color: #f41;
   color: #fefaf5;
   padding: 1rem;
   border: none;
   border-radius: 6px;
   font-size: 1rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: background 0.3s ease;
 }
 
 .form button:hover {
-  background-color: #ffdd55;
-  color: #1f1f1f;
+  background-color: #ff6b00;
+  color: #181d21;
 }
 
 .mapWrapper {
