--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -636,7 +636,8 @@ li:last-child {
 @media (max-width: 768px) {
   .restaurant {
     flex-direction: column;
-    padding: 4rem 0.5rem;
+    padding: 0 0.5rem;
+    gap: 1;
   }
 
   .restaurant-title {
@@ -817,7 +818,7 @@ li:last-child {
 
 @media (max-width: 768px) {
   .chef {
-    padding: 8rem 1.5rem;
+    padding: 1rem 1.5rem;
   }
 
   .chef-wrapper {
@@ -876,7 +877,7 @@ li:last-child {
   font-weight: 700;
   color: #f41;
   margin-bottom: 0.5rem;
-
+  white-space: nowrap;
   position: absolute;
   top: 0;
   left: 50%;
@@ -1020,15 +1021,20 @@ li:last-child {
 
 @media (max-width: 768px) {
   .menu {
-    padding: 6rem 0.5rem;
+    padding: 1rem 0.5rem;
   }
 
   .menu-tabs {
     flex-direction: column;
+    gap: 1rem;
   }
 
   .menu-grid {
     grid-template-columns: 1fr;
+  }
+
+  .menu-flavor-text {
+    font-size: 0.8rem;
   }
 }
 
