--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1032,7 +1032,7 @@ li:last-child {
 
 @media (max-width: 768px) {
   .menu {
-    padding: 1rem 0.5rem;
+    padding: 0 0.5rem;
   }
 
   .menu-tabs {
@@ -1298,7 +1298,7 @@ li:last-child {
 
 @media (max-width: 768px) {
   .recipes {
-    padding: 6rem 0.5rem;
+    padding: 3rem 0.5rem;
   }
 
   .recipesTitle {
@@ -1354,6 +1354,7 @@ li:last-child {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  order: 2;
 }
 
 .form input,
@@ -1402,6 +1403,7 @@ li:last-child {
   min-height: 350px;
   border-radius: 12px;
   overflow: hidden;
+  order: 1;
 }
 
 @media (max-width: 768px) {
@@ -1410,19 +1412,28 @@ li:last-child {
     gap: 2rem;
     grid-template-columns: 1fr;
   }
+
+  .mapWrapper {
+    order: 2;
+  }
+
+  .form {
+    order: 1;
+  }
 }
 
 /* FOOTER */
 
 .footer {
-  background: #1f1f1f; /* Or use your dark orange / accent if you prefer */
-  color: #fefaf5;
+  background: #f41; /* Or use your dark orange / accent if you prefer */
+  color: #fff;
   padding: 3rem 1rem 2rem;
   font-size: 0.95rem;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 .footer-inner {
-  max-width: 1280px;
+  max-width: 1800px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -1467,15 +1478,14 @@ li:last-child {
   text-align: center;
   margin-top: 2rem;
   font-size: 0.8rem;
-  color: #bbb;
-  border-top: 1px solid #333;
+  color: #fff;
+  border-top: 1px solid #fff;
   padding-top: 1rem;
 }
 
 .footer-logo {
   display: flex;
   flex-direction: row;
-  margin-left: 2rem;
 }
 
 .footer-socials {
@@ -1483,7 +1493,8 @@ li:last-child {
   gap: 1rem;
   align-items: center;
   margin-top: 1rem;
-  margin-left: 2rem;
+  width: 100%;
+  justify-content: space-evenly;
 }
 
 .footer-socials a img {
@@ -1496,4 +1507,12 @@ li:last-child {
 .footer-socials a:hover img {
   transform: scale(1.2);
   opacity: 0.8;
+}
+
+.footer-icon {
+  width: auto;
+  height: 80px;
+  fill: #fff;
+  margin-right: 0.5rem;
+  align-self: center;
 }
